# RaCEBoards-ESP32

./: README.md
examples/CircuitPython/BMP280/: BMP280.py
examples/CircuitPython/Button_LED/: README.md
examples/CircuitPython/DCMotor/: DCMotor.py
examples/CircuitPython/MUX/: MUX.py
examples/CircuitPython/PCF8563/: PCF8563.py
examples/CircuitPython/RA01S/: RA01S_RX.py  Ra01S_TX.py
examples/CircuitPython/Servo/: Servo.py
examples/v0.3/CircuitPython_base/Button_LED/: Button_LED.py
examples/v0.3/CircuitPython_base/Buzzer/: Buzzer.py
examples/v0.3/CircuitPython_base/GNSS/: GNSS.py
examples/v0.3/CircuitPython_base/LSM6DSL/: LSM6DSL.py
examples/v0.3/CircuitPython_base/QMC5883L/: QMC5883L.py
examples/v0.3/CircuitPython_base/SD/: SD_files.py  SD_folders.py
examples/v0.3/ESP_IDF/BMP280_work/: CMakeLists.txt  sdkconfig.old
examples/v0.3/ESP_IDF/Buzzer_work/: CMakeLists.txt
examples/v0.3/ESP_IDF/GNSS_work/: CMakeLists.txt  sdkconfig.old
examples/v0.3/ESP_IDF/LED_blink/: partitions.csv
examples/v0.3/ESP_IDF/MUX_work/: sdkconfig
examples/v0.3/ESP_IDF/SD_work/: CMakeLists.txt  sdkconfig
examples/v0.4/CircuitPython_base/: Китайский_завод.py
examples/v0.4/CircuitPython_base/Button_LED/: LED_blink.py
examples/v0.4/CircuitPython_base/Buzzer/: Buzzer_work.py
examples/v0.4/CircuitPython_base/DCMotor/: DCMotor_work.py
examples/v0.4/CircuitPython_base/GPIO_ext/: IO_work.py  MUX_work.py
examples/v0.4/CircuitPython_base/QMC5883L/: QMC5883L_work.py
examples/v0.4/CircuitPython_base/RA01S/: RA01S_RX_work.py  (+1 more)
examples/v0.4/ESP_IDF_extra/BLE_GATT_C_work/main/: CMakeLists.txt  main.c
examples/v0.4/ESP_IDF_extra/BLE_GATT_work/main/: CMakeLists.txt  main.c
examples/v0.4/ESP_IDF_extra/RPC_over_xxx_work/main/: CMakeLists.txt  main.c  simple_tests.txt
examples/v0.4/ESP_IDF_extra/UDP_work/main/: CMakeLists.txt  main.c
lib/CircuitPython/: GNSS.py  I2C_SPI_protocol_Base.py  LSM6DSL.py  PCF8563.py  README.md
lib/v0.3/CircuitPython_base/: BMP280.py  QMC5883L.py  Ra01S.py
lib/v0.3/MicroBlock/: AccelerometerGyroscope.ubl  Barometer.ubl  GNSS.ubl
lib/v0.4/CircuitPython_base/: BUZZER.py  DC_MOTOR.py  GPIO_IO.py  GPIO_MUX.py  LLCC68.py  LSM6DSL.py  Ra01S.py  SERVO.py
lib/v0.4/MicroBlock/: Magnetometer.ubl  SDCard.ubl  UDP_m.ubl
schemes/: README.md
src/: README.md
src/CircuitPython/9.0.5/: firmware.uf2
(+130 files in other folders)
